--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <!-- about me -->
     <h1>Hello I'm Dineth</h1>
+    <h2>FOT</h2>
     <h2>University of Ruhuna</h2>
+
 </body>
 </html>
